# business-os

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-engine/: config.py  main.py  requirements.txt
ai-engine/agent/: intent_router.py  main_agent.py  skill_creator.py
ai-engine/generator/: doc_skill_generator.py
ai-engine/llm/: __init__.py  base.py  factory.py  qwen_client.py
ai-engine/recommend/: skill_recommender.py
ai-engine/runner/: enterprise_context.py  skill_loader.py  skill_runner.py  skill_schema.py  task_lifecycle.py  twin_updater.py
ai-engine/scheduler/: engine.py
ai-engine/skills/presets/anomaly_alert/: skill.yaml
ai-engine/tools/: builtin.py  ecommerce.py  registry.py
ai-engine/workflow/: decomposer.py  executor.py
ai-engine/workflows/presets/: competitive_monitor.yaml  customer_growth.yaml  monthly_finance_review.yaml  morning_briefing.yaml  new_product_launch.yaml
backend-java/: Dockerfile  pom.xml
docs/: ARCHITECTURE.md  PRODUCT_DESIGN.md  VISION_DIGITAL_TWIN.md  WORKFLOW_ARCHITECTURE.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: login-form.tsx
frontend/src/lib/: api.ts  desktop.ts
frontend/src/stores/: auth-store.ts  chat-store.ts
sql/: V1__init.sql  V2__team_audit_log.sql  V3__skill_marketplace.sql  V4__task_management.sql  V5__mock_data.sql  V6__workflow_mock_data.sql
(+103 files in other folders)
