[package]
name = "business-os"
version = "1.0.0"
description = "Business OS — 你的企业数字孪生"
authors = ["Business OS Team"]
edition = "2021"

[lib]
name = "business_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
